...
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3iE-jn-W5V">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17i-x3-g1R">
                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="50"/>
                                                <state key="normal" title="Recording"/>
                                                <connections>
                                                    <action selector="onStartButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VFN-1o-0AN"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKT-dI-cKP">
                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="50"/>
                                                <state key="normal" title="External"/>
                                                <connections>
                                                    <action selector="onExternalButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kPn-Wr-y6Z"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zok-8k-Naf">
                                        <rect key="frame" x="0.0" y="50" width="375" height="50"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9xH-BJ-iYc">
                                                <rect key="frame" x="94" y="0.0" width="187.5" height="50"/>
                                                <state key="normal" title="Stop"/>
                                                <connections>
                                                    <action selector="onStopButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Alk-2i-1JP"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
